<resources>
    <string name="app_name">Calarm</string>
    <string name="alarm">Alarm</string>
    <string name="calarm">Calarm</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="settings">Settings</string>
    <string name="deskclock">DeskClock</string>
    <string name="help">Help</string>

    <!--Overall Using-->
    <string name="save">Save</string>
    <string name="time_format_before">%1$s before</string>
    <string name="time_format_hour">%1$d hours</string>
    <string name="time_format_minute">%1$d minutes</string>
    <string name="time_format_second">%1$d seconds</string>
    <string name="time_format_1hour">1 hour</string>
    <string name="time_format_1minute">1 minute</string>
    <string name="time_format_1second">1 second</string>
    <string name="sub_alarm_dialog_title">How far ahead of schedule can we be notified?</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_content">Are you sure to delete?</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="not_scheduled">Not scheduled</string>
    <string name="no_label">No label</string>
    <string name="dateTimeFormat">MMM dd yyyy, hh:mm a</string>
    <string name="dateFormat">MMM dd yyyy</string>
    <string name="dateFormatNoYear">EEEE, MMM dd</string>
    <string name="alarm_content_format">EEE hh:mm a</string>
    <string name="apmTimeFormat">h:mm a</string>
    <string name="label">Label</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="finished">finished</string>
    <string name="close">Close</string>
    <string name="stop">Stop</string>
    <string name="calarm_alarm">Calarm Alarm</string>
    <string name="calarm_calendar">Calarm Calendar Alarm</string>
    <string name="user_hello_morning">Good morning☀️</string>
    <string name="user_hello_afternoon">Have a great lunch🍽️</string>
    <string name="user_hello_evening">Good evening🎆</string>
    <string name="user_hello_night">Sleep tight🌙</string>
    <string name="no_show_dialog_msg">Do not show this dialog again.</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="at_least_one_item">At least one item</string>
    <string name="date_picker_title">Select date</string>
    <string name="time_picker_title">Select time</string>
    <string name="cannot_be_undone">This action cannot be undone.</string>

    <!--SettingsActivity-->
    <string name="home_address">Home address</string>
    <string name="first_event">Only first event</string>
    <string name="fixed_time_event">Events before time</string>
    <string name="all_events">Every event</string>
    <string name="calarm_create_option">Calarm create option</string>
    <string name="set_fixed_time">Set time</string>
    <string name="calarm_create_info">Calarm to generate</string>
    <string name="calendar_source_of_calarm">Calendar source of Calarm</string>
    <string name="select_calendar">Select calendar..</string>
    <string name="time_to_go_out">Time to get ready to go out</string>
    <string name="stopwatch_settings">Stopwatch Settings</string>
    <string name="title_no_show_reset_dialog">Do not show reset dialog</string>
    <string name="sum_on_no_show_reset_dialog">Never shows reset dialog again.</string>
    <string name="sum_off_no_show_reset_dialog">Shows reset dialog.</string>

    <!--LocationActivity-->
    <string name="cannot_get_address">Cannot get address</string>
    <string name="move_to_current_location">Move to current location</string>
    <string name="search">Search</string>
    <string name="set_home_location">Set home location</string>

    <!--AlarmReceiver-->
    <string name="from_alarm_name">from %1$s</string>
    <string name="missed_notification">Missed Alarm Notification</string>
    <string name="missed_alarm">Missed Alarm</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_off">Alarm Off</string>

    <!--CalarmReceiver-->
    <string name="missed_notification_calarm">Missed Calarm Notification</string>
    <string name="missed_calarm">Missed Calarm</string>

    <!--MainAlarmFragment-->
    <string name="no_alarms">No alarms</string>
    <string name="add_new_alarm">Add new alarm</string>
    <string name="active_alarm_count">There are %1$d alarms activated</string>

    <!--MainCalarmFragment-->
    <string name="no_calarms">No calarms</string>
    <string name="calarm_event_count">You have %1$d events today</string>
    <string name="set_today">Set date today</string>

    <!--MainTimerFragment-->
    <string name="add_new_timer">Add new timer</string>
    <string name="time_is_up">Time\'s Up!</string>
    <string name="countdown">Countdown</string>
    <string name="no_timers">No timers</string>

    <!--MainStopwatchFragment-->
    <string name="tap_to_schedule_stopwatch">Tap to schedule stopwatch</string>
    <string name="lap_no">Lap %1$d</string>
    <string name="share_stopwatch_title">⏱️ %s Record!\n</string>
    <string name="share_stopwatch_end">Recorded %d laps on Calarm</string>

    <!--EditActivity-->
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun_short">S</string>
    <string name="mon_short">M</string>
    <string name="tue_short">T</string>
    <string name="wed_short">W</string>
    <string name="thu_short">T</string>
    <string name="fri_short">F</string>
    <string name="sat_short">S</string>
    <string name="sub_alarm">Sub Alarm</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weekend">Weekend</string>
    <string name="weekday">Weekday</string>
    <string name="everyday">Everyday</string>
    <string name="alarm_ring">Set alarm ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="sub_alarm_exists">Sub alarm already exists.</string>

    <!--MainAlarmListAdapter-->
    <string name="no_sub_alarms">No sub alarms</string>
    <string name="day_format">%1$d days</string>
    <string name="hour_format">%1$d hours</string>
    <string name="minute_format">%1$d minutes</string>
    <string name="alarm_toast_format">Alarm set for %1$sfrom now</string>
    <string name="alarm_toast_min">Alarm set for less than 1 minute from now</string>

    <!--MainCalarmEventAdapter-->
    <string name="no_sub_calarms">No sub calarms</string>

    <!--DeskclockActivity-->
    <string name="charging">%1$d%%, Charging</string>
    <string name="block_notification">Block this notification</string>
    <string name="block_channel_message">Do not notify notifications for this channel.</string>
    <string name="block_package_message">Do not notify notifications for this application.</string>
    <string name="notification_access_setting">Notification access settings</string>
    <string name="deskclock_settings">Deskclock Settings</string>
    <string name="hidden_noti_channels">Hidden notification channels</string>
    <string name="no_items">No items</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="alarm_auto_dismiss_duration">Alarm auto dismiss duration</string>
</resources>