<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="zone.ien.calarm.activity.EditAlarmActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            app:maxButtonHeight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/usual_margin">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:clickable="true"
                    android:focusable="auto"
                    android:background="?attr/selectableItemBackground"
                    android:text="03:00"
                    android:fontFamily="@font/pretendard_black"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="48sp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_label"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_repeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="no repeat"
                    android:fontFamily="@font/pretendard"
                    android:layout_marginTop="@dimen/usual_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_label" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/group_repeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usual_margin"
                    app:singleLine="true"
                    app:singleSelection="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repeat">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_sun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/sun"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintHorizontal_chainStyle="spread"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/repeat_mon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_mon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/mon"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_sun"
                            app:layout_constraintEnd_toStartOf="@id/repeat_tue"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_tue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/tue"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_mon"
                            app:layout_constraintEnd_toStartOf="@id/repeat_wed"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_wed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/wed"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_tue"
                            app:layout_constraintEnd_toStartOf="@id/repeat_thu"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_thu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/thu"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_wed"
                            app:layout_constraintEnd_toStartOf="@id/repeat_fri"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_fri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/fri"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_thu"
                            app:layout_constraintEnd_toStartOf="@id/repeat_sat"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/repeat_sat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/sat"
                            android:fontFamily="@font/pretendard"
                            app:layout_constraintStart_toEndOf="@id/repeat_fri"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.chip.ChipGroup>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/group_ring"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usual_margin"
                    android:paddingVertical="@dimen/usual_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_repeat">

                    <ImageView
                        android:id="@+id/ic_ring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ring"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="bell"
                        android:fontFamily="@font/pretendard"
                        android:layout_marginStart="@dimen/usual_margin"
                        app:layout_constraintStart_toEndOf="@id/ic_ring"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/group_vibrate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/usual_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_ring">

                    <ImageView
                        android:id="@+id/ic_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vibration"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_vibrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate"
                        android:fontFamily="@font/pretendard"
                        android:layout_marginStart="@dimen/usual_margin"
                        android:layout_marginEnd="@dimen/usual_margin"
                        app:layout_constraintStart_toEndOf="@id/ic_vibrate"
                        app:layout_constraintEnd_toStartOf="@id/switch_vibrate"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switch_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/group_vibrate" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tag_sub_alarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_alarm"
                    android:textSize="@dimen/tag_size"
                    android:textColor="@color/black"
                    android:fontFamily="@font/pretendard_black"
                    android:layout_marginTop="@dimen/usual_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider1" />

                <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_add"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tag_sub_alarm"
                    app:layout_constraintBottom_toBottomOf="@id/tag_sub_alarm" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_sub_alarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/usual_margin"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tag_sub_alarm" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>